# claw

./: .gitignore  .medusa-artifact-hash  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  EXPLOIT_REPORT.md  README.md  chains.json  destroyer.redb  dev.nix  discovered_targets.json  extract_bytecode.py  foundry.toml  poc.md  poc_found.t.sol  run_hard_test.sh  shell.nix  slither_results.json  targets.json
.github/workflows/: compile-p2p.yml
cache/: solidity-files-cache.json
contracts/: Attacker.sol  AuditTestTarget.sol  ChallengeLending.sol  CreamLending.sol  HardTest.sol  HardVault.sol  MiniToken.sol  MockOracle.sol  MockPair.sol  StaleOracleLender.sol  StandaloneHardTest.sol  VulnerableLender.sol  YieldVault.sol  ZeroDayChallenge.sol  test_cross_reentrancy.sol  test_economic_bugs.sol  test_flashloan_atomicity.sol  test_liquidation_cascade.sol  test_oracle_manipulation.sol  test_state_diff.sol
detectors/: custom_slither_detectors.py
examples/: addr_test.rs  addr_test2.rs  which_cast.rs
mocks/: DirtyPool.hex  LendX.hex  Staker.sol  StaleLender.hex  StaleLender.sol  StaleOracle.hex  StaleOracle.sol
p2p_test/: Cargo.toml
p2p_test/.cargo/: config.toml
p2p_test/src/: main.rs
p2p_test/vendor_kona_net/: .cargo_vcs_info.json  Cargo.toml
p2p_test/vendor_kona_net/src/: builder.rs
p2p_test/vendor_kona_net/src/gossip/: behaviour.rs  event.rs
script/: DeployTestSuite.s.sol
scripts/: deploy.sh  e2e_test.sh
src/: cache.rs  config.rs  controller.rs  lib.rs  main.rs  report.rs  types.rs
src/agent/:  abi_router.rs   heuristic_engine.rs  abi_router.rs  access_control.rs  adaptive_mutator.rs  assassin_engine.rs  control_flow_graph.rs  cross_ghost_revm.rs  disassembler.rs  discovery.rs  execution_agent.rs  executor.rs  executor.rs.save  exploit_verifier.rs  fetcher.rs  forker.rs  main.rs  path_pruner.rs  payload_forge.rs  precision_solver.rs  reentrancy_detector.rs  selector_extractor.rs  simulator.rs  symbolic_stack.rs
src/agents/: assassin_engine.rs  autonomous_economic_dominator.rs  chain.rs  constructor_tool.rs  context_first_engine.rs  controller.rs  cross_contract.rs  cross_ghost_reentrancy.rs  disassembler.rs  discovery.rs  evmole_analyzer.rs  execution_agent.rs  executor.rs  exploit_verifier.rs  fetcher.rs  finding.rs  forker.rs  fuzzer.rs  heimdall_analyzer.rs  hunt.rs  invariant_hunter.rs  ityfuzz_integration.rs  local_executor.rs  mod.rs  notifier.rs  oracle_discovery.rs  oracle_laggard.rs  orchestrator.rs  poc_generator.rs  precision_solver.rs  protocol.rs  proxy_resolver.rs  reentrancy_detector.rs  repo_scanner.rs  revenue_calc.rs  reward_dilution.rs  ror_optimizer.rs  search_hunter.rs  severity.rs  simulator.r  (+9 more)
templates/: PocTemplate.t.sol
tests/: autonomous_demo.rs  battle_test.rs  borrow_debug.rs  bug_detection_validation.rs  cream_finance_ror.rs  euler_oracle_laggard.rs  integration.rs  live_fetch.rs  live_validation.rs  tool_detection.rs
work_dir/: abis.json  coverage.json  coverage.txt
work_dir/corpus/: 10  10_replayable  11  11_replayable  12  12_replayable  13  13_replayable  14  14_replayable  15  15_replayable  16  16_replayable  17  17_replayable  18  18_replayable  19  19_replayable  1_seed  1_seed_replayable  20  20_replayable  21  21_replayable  22  22_replayable  23  23_replayable  24  24_replayable  25  25_replayable  26  26_replayable  27  27_replayable  28  28_replayable  (+26 more)
work_dir/coverage/: cov_1778709405893612.json  cov_1778709406120611.json  cov_1778709406203175.json  cov_1778709406281021.json  cov_1778709413912922.json  cov_1778709554347892.json  cov_1778709554409519.json  cov_1778709554555490.json  cov_1778709805326923.json  cov_1778709805602609.json  cov_1778709806219672.json  cov_1778709806225304.json  cov_1778709806242051.json  cov_1778709806928251.json  cov_1778709808060166.json  cov_1778709808173802.json  cov_1778711795059195.json  cov_1778711795140374.json  cov_1778711795208752.json  cov_1778711795350580.json  cov_1778711795359330.json  cov_1778711795365882.json  cov_1778711795370801.json  cov_1778711795574305.json  cov_1778711795713913.json  cov_1778711795805936.json  cov_1778711796246758.json  cov_1778711797967374.json  cov_1778711798548604.json  (+52 more)
(+95 files in other folders)
