[package]
name = "web3-destroyer"
version = "0.3.0"
edition = "2021"

[dependencies]
tempfile = "3"
toml = "0.8"
toml_edit = "0.21.1"
alloy = { version = "0.3", features = ["providers", "transports", "rpc-types", "reqwest-rustls-tls"] }
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-sol-types = "1.5.6"
alloy-dyn-abi = "1.5.6"

revm = { version = "=14.0.3", features = ["std", "serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"

mimalloc = { version = "0.1", default-features = false }
hex = "0.4"
reqwest = { version = "0.13.3", features = ["json"] }
solang-parser = "0.3.5"
once_cell = "1.19"
alloy-serde = "0.8"
proptest = "1.4"



[profile.release]
codegen-units = 1
strip = true
opt-level = 3
lto = true
